crates/ruff_python_parser/tests/snapshots/invalid_syntax@ipython_help_escape_command_error_recovery_2.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ipython_help_escape_command_error_recovery_2.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..51,
        body: [
            With(
                StmtWith {
                    node_index: NodeIndex(None),
                    range: 37..51,
                    is_async: false,
                    items: [
                        WithItem {
                            range: 42..51,
                            node_index: NodeIndex(None),
                            context_expr: Tuple(
                                ExprTuple {
                                    node_index: NodeIndex(None),
                                    range: 42..51,
                                    elts: [
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 43..44,
                                                id: Name("a"),
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 47..48,
                                                id: Name("b"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                    ctx: Load,
                                    parenthesized: true,
                                },
                            ),
                            optional_vars: None,
                        },
                    ],
                    body: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"mode": "ipython"}
2 | with (a, ?b
  |          ^ Syntax Error: Expected an expression or a ')'
3 | ?
  |


  |
1 | # parse_options: {"mode": "ipython"}
2 | with (a, ?b
3 | ?
  | ^ Syntax Error: Expected `,`, found `?`
  |


  |
2 | with (a, ?b
3 | ?
  |  ^ Syntax Error: unexpected EOF while parsing
  |
